<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="120dp"
            android:layout_height="100dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ayambakar" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleFood"
            style="@style/TitleFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/nama_makanan"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <TextView
            android:id="@+id/descFood"
            style="@style/DescFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="14dp"
            android:text="@string/deskripsi_makanan"
            android:maxWidth="220dp"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/titleFood" />

        <TextView
            android:id="@+id/priceFood"
            style="@style/PriceFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23.000"
            android:layout_marginStart="14dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toEndOf="@+id/cardView"/>

        <com.example.ppb_menu.custom_ui.ButtonPesan
            android:id="@+id/btnOrder"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:text="@string/message"
            android:background="@drawable/custom_button_pesan"
            style="@style/CustomButton"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>