<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            style="@style/CustomToolbar"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/iv_back_toolbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/left_arrow"
                android:layout_gravity="start"
                android:contentDescription="@string/icon_back"
                android:padding="10dp"
                app:tint="@color/white"/>

            <TextView
                android:id="@+id/tv_title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_order"
                style="@style/CustomTitleToolbar"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/imageFood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ayambakar" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_makanan"
                android:layout_marginTop="20dp"
                style="@style/TitleFoodOrder"/>

            <TextView
                android:id="@+id/descFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_makanan"
                android:layout_marginTop="10dp"
                style="@style/DescFoodOrder"/>

            <TextView
                android:id="@+id/priceFood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="23.000"
                android:layout_marginTop="24dp"
                style="@style/PriceFoodOrder"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/border_text">

            <ImageButton
                android:id="@+id/reduceCount"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/reduce_count"
                android:background="@color/green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/resultsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/inter_bold"
                android:text="200"
                app:layout_constraintBottom_toBottomOf="@+id/reduceCount"
                app:layout_constraintStart_toEndOf="@+id/reduceCount"
                app:layout_constraintTop_toTopOf="@+id/reduceCount" />

            <ImageButton
                android:id="@+id/addCount"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/add_count"
                android:background="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/resultsCount"
                app:layout_constraintStart_toEndOf="@+id/resultsCount"
                app:layout_constraintTop_toTopOf="@+id/resultsCount"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/totalHargaMakanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.600.000"
                android:fontFamily="@font/inter_extra_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.example.ppb_menu.custom_ui.ButtonOrder
            android:id="@+id/btnPesan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/CustomButtonOrder"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>