<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReceiptActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            style="@style/CustomToolbar"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/iv_back_toolbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/left_arrow"
                android:layout_gravity="start"
                android:contentDescription="@string/icon_back"
                android:padding="10dp"
                app:tint="@color/white"/>

            <TextView
                android:id="@+id/tv_title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pemesanan"
                style="@style/CustomTitleToolbar"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="120dp"
                android:layout_height="100dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageFood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ayambakar" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/titleFood"
                style="@style/TitleFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/nama_makanan"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView" />

            <TextView
                android:id="@+id/descFood"
                style="@style/DescFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/deskripsi_makanan"
                android:maxWidth="220dp"
                app:layout_constraintStart_toStartOf="@+id/titleFood"
                app:layout_constraintTop_toBottomOf="@+id/titleFood" />

            <TextView
                android:id="@+id/priceFood"
                style="@style/PriceFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23.000"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/descFood" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pemesanan Berhasil"
            android:layout_marginStart="20dp"
            android:background="@drawable/order_success_bg"
            android:fontFamily="@font/inter_medium"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:gravity="center"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/nameFoodOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_makanan"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/black"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/hargaMakanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23.000"
                android:textSize="12sp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toStartOf="@+id/kali"
                app:layout_constraintTop_toTopOf="@id/kali"
                app:layout_constraintBottom_toBottomOf="@id/kali"/>
            <TextView
                android:id="@+id/kali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="x"
                android:textSize="12sp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/black"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toStartOf="@+id/totalMakanan"
                app:layout_constraintTop_toTopOf="@+id/totalMakanan"
                app:layout_constraintBottom_toBottomOf="@id/totalMakanan"/>
            <TextView
                android:id="@+id/totalMakanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200"
                android:textSize="12sp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Bayar"
                android:textSize="12sp"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/totalHargaMakanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.600.000"
                android:textSize="12sp"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.example.ppb_menu.custom_ui.ButtonBackToMenu
            android:id="@+id/backToMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kembali ke Menu"
            android:fontFamily="@font/inter_semi_bold"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button_fill"
            style="@style/CustomButton"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>